# sexybabeycord

./: .checkov.yaml  .env.test  .gitignore  .pre-commit-config.yaml  .releaserc.json  .renovaterc.json5  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  sexybabeycord.py  start.sh  statcat.py  synkronized.yaml  test.py  test_gabonganized.py  testing.py  tracing.py
.github/: dependabot.yml
.github/workflows/: build-and-release.yml  build.yml  build_and_test.yml  deploy.yml  docker-image.yml  main.yml  pr-preview-teardown.yml  pr-preview.yml  pull-request.yml  pull_request.yml  python-app.yml  release.yml  renovate.yml  security.yml  tag.yml  test.yml  verify-pr.yml
archived_cogs/: gabonganized.py  wrench.py
bot/: __init__.py  __main__.py  bot.py  constants.py  sblib.py  sexybabeycord.py
bot/exts/: __init__.py  asher.py  astropix.py  bash.py  caption.py  distort.py  download.py  fate.py  fixlink.py  gabonganized.py  gifify.py  laughtale.py  mogged.py  moodmeter.py  peanut_gallery.py  remind.py  soundboard.py  speech.py  speechtotext.py  the-way.py  wrench.py  ytdl.py
bot/resources/: the-way.json
bot/resources/templates/: .env_template  accounts_template.json  cog_template.py  env_template
bot/utils/: file.py  file_helper.py  magick_helper.py  mongo.py  wrappers.py
cog-archive/: haiku.py  index.py  minecraft.py  statcat.py
cogs/: astropix.py  distort.py  fate.py  fixlink.py  gabonganized.py  haiku.py  index.py  minecraft.py  speech.py  statcat.py
disabled_exts/: peanut_gallery.py  remind.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  secret.yaml
lib/: sblib.py
src/sexybabeycord/: __init__.py  bot.py  constants.py  main.py
src/sexybabeycord/exts/: asher.py  caption.py  distort.py  fate.py  fixlink.py  mason.py  mogged.py  moodmeter.py  peanut_gallery.py  speechtotext.py
src/sexybabeycord/utils/: __init__.py  file_helper.py  wrappers.py
tests/: conftest.py
tests/exts/: test_astropix.py  test_caption.py  test_distort.py  test_fixlink.py  test_gabonganized.py  test_speechtotext.py
tests/utils/: test_file_helper.py
wip/: bash.py
wip-cogs/: index.py  statcat.py
