[tool.poetry]
name = "sexybabeycord"
version = "0.1.4"
description = "Sexybabeycord is a multi-purpose discord bot that handles many different features in the form of cogs. The list of cogs grows and shrinks with the activities of the server."
authors = ["Vaughn Woerpel"]
readme = "README.md"
packages = [{ include = "./bot" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
Wand = "^0.6.11"
aiohttp = "^3.10.5"
pydub = "^0.25.1"
requests = "^2.32.3"
validators = "^0.34.0"
speechrecognition = "^3.10.4"
twscrape = "^0.13"
coloredlogs = "^15.0.1"
yt-dlp = "^2024.8.6"
pymongo = "^4.8.0"
croniter = "^3.0.3"
dnspython = "^2.4.2"
pillow = "^10.4.0"
numpy = "^1.26.1"
rembg = "^2.0.59"
magika = "^0.5.1"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
opencv-python = "^4.10.0.84"
pynacl = "^1.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-dotenv = "^0.5.2"
dpytest = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.3.2"
deptry = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = [
    "tests"
]
env_files=[".env.test"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
#select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pytest-dotenv", "ruff", "opencv-python", "dnspython", "pynacl"] # largely dev depends

[tool.deptry.package_module_name_map]
discord-py = "discord"
pillow = "PIL"
beautifulsoup4 = "bs4"
speechrecognition = "speech_recognition"
python-dotenv = "dotenv"
opencv-python = "cv2"
