[project]
name = "sexybabeycord"
version = "0.1.6"
description = "Sexybabeycord is a multi-purpose discord bot that handles many different features in the form of cogs. The list of cogs grows and shrinks with the activities of the server."
authors = [{ name = "Vaughn Woerpel" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "Wand>=0.6.11,<0.7",
    "aiohttp>=3.10.5,<4",
    "pydub>=0.25.1,<0.26",
    "requests>=2.32.3,<3",
    "validators>=0.34.0,<0.35",
    "speechrecognition>=3.10.4,<4",
    "twscrape>=0.13,<0.14",
    "coloredlogs>=15.0.1,<16",
    "yt-dlp>=2024.8.6,<2025",
    "pymongo>=4.8.0,<5",
    "croniter>=3.0.3,<4",
    "dnspython>=2.4.2,<3",
    "pillow>=10.4.0,<11",
    "numpy>=1.26.1,<2",
    "rembg>=2.0.59,<3",
    "magika>=0.5.1,<0.6",
    "discord-py>=2.4.0,<3",
    "python-dotenv>=1.0.1,<2",
    "opencv-python>=4.10.0.84,<5",
    "pynacl>=1.5.0,<2",
]

[dependency-groups]
test = [
    "pytest>=6.0.0,<7",
    "pytest-dotenv>=0.5.2,<0.6",
    "dpytest>=0.7.0,<0.8",
]
dev = [
    "pre-commit>=3.3.3,<4",
    "ruff>=0.3.2,<0.4",
    "deptry>=0.15.0,<0.16",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = [
    "tests"
]
env_files=[".env.test"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pytest-dotenv", "ruff", "opencv-python", "dnspython", "pynacl"] # largely dev depends

[tool.deptry.package_module_name_map]
discord-py = "discord"
pillow = "PIL"
beautifulsoup4 = "bs4"
speechrecognition = "speech_recognition"
python-dotenv = "dotenv"
opencv-python = "cv2"
