[project]
name = "sexybabeycord"
version = "0.3.0"
description = "Sexybabeycord is a multi-purpose discord bot that handles many different features in the form of cogs. The list of cogs grows and shrinks with the activities of the server."
authors = [{ name = "Vaughn Woerpel" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "Wand",
    "aiohttp",
    "pydub",
    "requests",
    "validators",
    "speechrecognition",
    "twscrape",
    "coloredlogs",
    "yt-dlp",
    "pymongo",
    "croniter",
    "dnspython",
    "pillow",
    "numpy",
    "rembg",
    "magika",
    "discord-py",
    "python-dotenv",
    "opencv-python",
    "pynacl",
    "minio>=7.2.15",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-dotenv",
    "dpytest",
]
dev = [
    "pre-commit",
    "ruff",
    "deptry",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = [
    "tests"
]
env_files=[".env.test"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pytest-dotenv", "ruff", "opencv-python", "dnspython", "pynacl"] # largely dev depends

[tool.deptry.package_module_name_map]
discord-py = "discord"
pillow = "PIL"
beautifulsoup4 = "bs4"
speechrecognition = "speech_recognition"
python-dotenv = "dotenv"
opencv-python = "cv2"
